cabal-version:      2.4
name:               aoc2023
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Adrian Dole
maintainer:         adrian@dole.tech

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable aoc2023
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules:
        Common
        Day1
        Day2
        Day3
        Day4

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base, text, megaparsec, unordered-containers, hashable
    hs-source-dirs:   app
    default-language: Haskell2010
